# taskchain

./: Cargo.toml  README.md  network.toml  project-structure.txt
frontend/: README.md  env.example  eslint.config.mjs  package-lock.json  package.json
frontend/app/: constants.ts  globals.css  layout.tsx  page-wrapper.tsx  page.tsx
frontend/app/api/ai-arbitrator/: route.ts
frontend/app/api/ai-oracle/: route.ts
frontend/app/api/ai-oracle-trigger/: route.ts
frontend/app/components/: AppealDisputeModal.tsx  ClientApiProvider.tsx  CreateProjectModal.tsx  DisputeDetails.tsx  ErrorBoundary.tsx  Header.tsx  InitiateDisputeModal.tsx  JurorRegistrationModal.tsx  JuryVoteModal.tsx  ProjectApplicants.tsx  ProjectCard.tsx  ReputationCard.tsx  WalletConnectButton.tsx  WorkSubmissionModal.tsx
frontend/app/components/ui/: Badge.tsx  (+1 more)
frontend/app/context/: ApiContext.tsx
frontend/app/create-project/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/jury/: page.tsx
frontend/app/services/: ai-arbitration-service.ts
frontend/app/types/: arbitration.ts
frontend/app/utils/: ai-arbitrator.ts
node/src/: chain_spec.rs
pallets/arbitration/: Cargo.toml
pallets/arbitration/src/: lib.rs  mock.rs  tests.rs
pallets/pallet-projects/: Cargo.toml
pallets/pallet-projects/src/: lib.rs  mock.rs  tests.rs
pallets/projects/: Cargo.toml
pallets/projects/src/: lib.rs  mock.rs
pallets/reputation/: Cargo.toml
pallets/reputation/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
(+5 files in other folders)
