[package]
name = "pallet-reputation"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frame-support.workspace = true
frame-system.workspace = true
codec.workspace = true
serde.workspace = true
scale-info.workspace = true
sp-runtime.workspace = true
pallet-balances.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true


[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "codec/std",
  "scale-info/std",
  "sp-runtime/std",
  "pallet-balances/std",  
]

